# ComputerVision

./: .gitignore  Dockerfile  README.md  docker-compose.yml  fr.py  manage.py  pyproject.toml  pytest.ini  requirements.txt
.venv311/: pyvenv.cfg
cv_fr_mvp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
fr/: __init__.py  cli.py  encode.py  paths.py  recognize.py  register.py  train.py  utils.py  webcam.py
recognition/: apps.py  urls.py  views.py
recognition/management/commands/: fr_encode.py  fr_train.py
recognition/templates/recognition/: index.html  manage.html
samples/: README.md
scripts/: prepare_samples.py  smoke_train.py
tests/: test_train.py  test_utils.py
ui/: streamlit_app.py
web/: asgi.py  settings.py  urls.py  wsgi.py
