[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-fr-mvp"
version = "0.1.0"
description = "Face Recognition MVP (CLI + modules)"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Private" }]
dependencies = [
    "face-recognition",
    "opencv-python",
    "numpy",
    "scikit-learn",
    "joblib",
    "imutils",
    "tqdm",
]

[project.scripts]
fr = "fr.cli:main"

[tool.setuptools]
packages = ["fr"]

